--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-maps": "^1.4.0",
+    "react-native-paper": "^5.4.1",
     "react-native-web": "~0.18.10",
     "react-query": "^3.39.3"
   },
