--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-picker/picker": "^2.4.8",
+    "@mapbox/polyline": "^1.2.0",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -20,15 +21,17 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.3",
-    "react-native-maps": "^1.4.0",
+    "react-native": "0.71.6",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.4.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-web": "~0.18.10",
+    "react-native-web-maps": "^0.3.0",
     "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/mapbox__polyline": "^1.0.2",
     "@types/react": "~18.0.14",
     "typescript": "^4.9.4"
   },
